fixed layout for better firefox compatibility

--- a/vbamobile.webflow/new-survey.html
+++ b/vbamobile.webflow/new-survey.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Last Published: Thu Sep 15 2016 07:27:02 GMT+0000 (UTC) -->
+<!-- Last Published: Fri Sep 16 2016 01:16:48 GMT+0000 (UTC) -->
 <html data-wf-page="57d237b1e0d551536793ae66" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -27,9 +27,7 @@
       <h1 class="title">VBA</h1>
       <h2 class="sub-title">mobile</h2>
     </div>
-    <a class="user w-inline-block" href="#">
-      <img alt="user setting logo" class="user-logo" height="56" src="images/ic_account_box_white_24px.svg" width="56">
-    </a>
+    <a class="username" href="#">username</a>
   </header>
   <main class="content-wrapper">
     <div class="form-container w-container">
