--- a/vbamobile.webflow/login.html
+++ b/vbamobile.webflow/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Last Published: Thu Sep 15 2016 07:27:02 GMT+0000 (UTC) -->
+<!-- Last Published: Fri Sep 16 2016 01:16:48 GMT+0000 (UTC) -->
 <html data-wf-page="57da29184d0e071437ed1d38" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -22,42 +22,38 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div class="wrapper">
-    <header class="header">
-      <div class="titles">
-        <h1 class="title">VBA</h1>
-        <h2 class="sub-title">mobile</h2>
-      </div>
-      <a class="user w-inline-block" href="#">
-        <img alt="user setting logo" class="user-logo" height="56" src="images/ic_account_box_white_24px.svg" width="56">
-      </a>
-    </header>
-    <main class="content-wrapper">
-      <div class="login-container">
-        <h2 class="login-title">Log in to VBA mobile</h2>
-        <div class="w-form">
-          <form action="/login" class="login-form" data-name="Login Form" data-redirect="/" id="wf-form-Login-Form" method="post" name="wf-form-Login-Form">
-            <label for="Username">Username :</label>
-            <input class="w-input" data-name="Username" id="Username" maxlength="256" name="Username" placeholder="Enter your username" required="required" type="text">
-            <label for="email">Password :&nbsp;</label>
-            <input class="w-input" data-name="Email" id="email" maxlength="256" name="email" placeholder="Enter your password" required="required" type="password">
-            <input class="w-button" data-wait="Please wait..." type="submit" value="Log in">
-          </form>
-          <div class="w-form-done">
-            <div>Thank you! Your submission has been received!</div>
-          </div>
-          <div class="w-form-fail">
-            <div>Oops! Something went wrong while submitting the form</div>
-          </div>
+  <header class="header">
+    <div class="titles">
+      <h1 class="title">VBA</h1>
+      <h2 class="sub-title">mobile</h2>
+    </div>
+    <a class="username" href="#">username</a>
+  </header>
+  <main class="content-wrapper">
+    <div class="login-container">
+      <h2 class="login-title">Log in to VBA mobile</h2>
+      <div class="w-form">
+        <form action="/login" class="login-form" data-name="Login Form" data-redirect="/" id="wf-form-Login-Form" method="post" name="wf-form-Login-Form">
+          <label for="username-2">Username :</label>
+          <input class="w-input" data-name="username" id="username-2" maxlength="256" name="username" placeholder="Enter your username" required="required" type="text">
+          <label for="password">Password :&nbsp;</label>
+          <input class="w-input" data-name="password" id="password" maxlength="256" name="password" placeholder="Enter your password" required="required" type="password">
+          <input class="w-button" data-wait="Please wait..." type="submit" value="Log in">
+        </form>
+        <div class="w-form-done">
+          <div>Thank you! Your submission has been received!</div>
         </div>
-        <div class="account-links">
-          <a class="login-links" href="#">Forgotten account?</a>
-          <div>·</div>
-          <a class="login-links" href="#">Sign up for VBA</a>
+        <div class="w-form-fail">
+          <div>Oops! Something went wrong while submitting the form</div>
         </div>
       </div>
-    </main>
-  </div>
+      <div class="account-links">
+        <a class="login-links" href="#">Forgotten account?</a>
+        <div>·</div>
+        <a class="login-links" href="#">Sign up for VBA</a>
+      </div>
+    </div>
+  </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="js/vbamobile.js" type="text/javascript"></script>
   <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
