latest webflow import

--- a/vbamobile.webflow/index.html
+++ b/vbamobile.webflow/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Last Published: Fri Sep 16 2016 01:16:48 GMT+0000 (UTC) -->
+<!-- Last Published: Sat Sep 17 2016 04:08:42 GMT+0000 (UTC) -->
 <html data-wf-page="57ced8c91d3807cb6dad5f36" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -31,12 +31,12 @@
   <main class="content-wrapper">
     <div class="button-container">
       <a class="projects-button w-inline-block" href="/newproject">
-        <img alt="new project button logo" class="project-button-logo" height="56" src="images/addButtonBlue.svg" width="56">
+        <img alt="new project button logo" class="project-button-logo" src="images/addButtonBlue.svg" width="56">
         <div class="project-button-text">NEW
           <br>PROJECT</div>
       </a>
       <a class="projects-button w-inline-block" href="#">
-        <img class="project-button-logo" height="56" src="images/clipboardBlue.svg" width="56">
+        <img class="project-button-logo" src="images/clipboardBlue.svg">
         <div class="project-button-text">PROJECTS</div>
       </a>
     </div>
