--- a/vbamobile.webflow/survey.html
+++ b/vbamobile.webflow/survey.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- Last Published: Fri Sep 16 2016 01:16:48 GMT+0000 (UTC) -->
-<html data-wf-page="57d237b1e0d551536793ae66" data-wf-site="57ced8c91d3807cb6dad5f35">
+<!-- Last Published: Sat Sep 17 2016 04:08:42 GMT+0000 (UTC) -->
+<html data-wf-page="57dc83871c93d4e04d965fca" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
-  <title>New survey</title>
-  <meta content="New survey" property="og:title">
+  <title>species</title>
+  <meta content="species" property="og:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -30,11 +30,13 @@
     <a class="username" href="#">username</a>
   </header>
   <main class="content-wrapper">
-    <div class="form-container w-container">
+    <div class="form-container">
       <h1 class="form-header">General Observation</h1>
       <div class="form w-form">
         <form data-name="Email Form" id="email-form" name="email-form">
+          <label for="name">Name:</label>
           <input class="w-input" data-name="Name" id="name" maxlength="256" name="name" placeholder="Survey  name" type="text">
+          <label for="Primary-discipline">Primary discipline:</label>
           <select class="w-select" data-name="Primary discipline" id="Primary-discipline" name="Primary-discipline">
             <option value="">Aquatic Fauna</option>
             <option value="First">Aquatic Invertebrates</option>
@@ -42,6 +44,7 @@
             <option value="Third">Marine</option>
             <option value="">Terrestrial Fauna</option>
           </select>
+          <label for="Site-ID">Site ID:</label>
           <input class="w-input" data-name="Site ID" id="Site-ID" maxlength="256" name="Site-ID" placeholder="Site ID" required="required" type="text">
         </form>
         <div class="w-form-done">
@@ -53,14 +56,15 @@
       </div>
       <h2 class="form-header">Survey information</h2>
       <div class="form w-form">
-        <form data-name="Email Form 2" id="email-form-2" name="email-form-2">
+        <form action="/survey" data-name="Email Form 2" id="email-form-2" method="post" name="email-form-2">
           <label for="start-date">Start Date:</label>
           <input class="w-input" data-name="start date" id="start-date" maxlength="256" name="start-date" placeholder="dd/mm/yyyy" type="text">
           <label for="email">End date:</label>
           <input class="w-input" data-name="Email" id="email" maxlength="256" name="email" placeholder="dd/mm/yyyy" required="required" type="email">
           <textarea class="survey-comment w-input" data-name="Survey comment" id="Survey-comment" maxlength="5000" name="Survey-comment" placeholder="Survey comment"></textarea>
-          <div class="form-buttons">
-            <input class="w-button" data-wait="Please wait..." type="submit" value="Add Species">
+          <div class="form-button-container">
+            <input class="form-button-survey w-button" data-wait="Please wait..." type="submit" value="save">
+            <a class="form-button-survey w-button" href="/species">add species</a>
           </div>
         </form>
         <div class="w-form-done">
