implemented view user's projects page

--- a/vbamobile.webflow/login.html
+++ b/vbamobile.webflow/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Last Published: Tue Sep 20 2016 03:49:04 GMT+0000 (UTC) -->
+<!-- Last Published: Tue Sep 27 2016 10:43:24 GMT+0000 (UTC) -->
 <html data-wf-page="57da29184d0e071437ed1d38" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -38,7 +38,7 @@
           <input class="w-input" data-name="username" id="username-2" maxlength="256" name="username" placeholder="Enter your username" required="required" type="text">
           <label for="password">Password :&nbsp;</label>
           <input class="w-input" data-name="password" id="password" maxlength="256" name="password" placeholder="Enter your password" required="required" type="password">
-          <input class="w-button" data-wait="Please wait..." type="submit" value="Log in">
+          <input class="form-button w-button" data-wait="Please wait..." type="submit" value="Log in">
         </form>
         <div class="w-form-done">
           <div>Thank you! Your submission has been received!</div>
