--- a/vbamobile.webflow/viewprojects.html
+++ b/vbamobile.webflow/viewprojects.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- Last Published: Tue Sep 27 2016 10:43:24 GMT+0000 (UTC) -->
+<!--  Last Published: Fri Sep 30 2016 10:34:29 GMT+0000 (UTC)  -->
 <html data-wf-page="57e9cb561117c47f4d92d349" data-wf-site="57ced8c91d3807cb6dad5f35">
-<head>
+<head >
   <meta charset="utf-8">
-  <title>myProject</title>
+  <title >myProject</title>
   <meta content="myProject" property="og:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -30,29 +30,23 @@
     <a class="username" href="#">username</a>
   </header>
   <main class="content-wrapper">
+    <h1 >Projects list</h1>
     <ul class="projects-list w-list-unstyled">
       <li class="project-card">
-        <div class="project-card-title">Armstrong Western Highway Diversion</div>
-        <p class="project-card-desc">Fauna survey and assessment prior to new road diversion.
-          <br>Bla bla bla save the possum, bla bla.</p>
-        <div class="project-card-footer">
-          <div class="project-card-dates">10/12/01 ➞ 14/12/01</div>
-          <div class="project-card-id">#1214</div>
-        </div>
-      </li>
-      <li class="project-card">
-        <div class="project-card-title">Armstrong Western Highway Diversion and Freedom Roundabout.</div>
-        <p class="project-card-desc">Fauna survey and assessment prior to new road diversion.
-          <br>Bla bla bla save the possum, bla bla.</p>
-        <div class="project-card-footer">
-          <div class="project-card-dates">10/12/01 ➞ 14/12/01</div>
-          <div class="project-card-id">#1214</div>
-        </div>
+        <a class="card-link w-inline-block" href="/surveyspage">
+          <div class="project-card-title">Armstrong Western Highway Diversion</div>
+          <p class="project-card-desc">Fauna survey and assessment prior to new road diversion.
+            <br >Bla bla bla save the possum, bla bla.</p>
+          <div class="project-card-footer">
+            <div class="project-card-dates">10/12/01 ➞ 14/12/01</div>
+            <div class="project-card-id">#1214</div>
+          </div>
+        </a>
       </li>
     </ul>
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="js/vbamobile.js" type="text/javascript"></script>
-  <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
