--- a/vbamobile.webflow/viewsurveys.html
+++ b/vbamobile.webflow/viewsurveys.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--  Last Published: Fri Sep 30 2016 10:34:29 GMT+0000 (UTC)  -->
-<html data-wf-page="57da29184d0e071437ed1d38" data-wf-site="57ced8c91d3807cb6dad5f35">
+<html data-wf-page="57ee3d1517fa56b83ae17d3f" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head >
   <meta charset="utf-8">
-  <title >login</title>
-  <meta content="login" property="og:title">
+  <title >Viewsurveys</title>
+  <meta content="Viewsurveys" property="og:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -30,29 +30,19 @@
     <a class="username" href="#">username</a>
   </header>
   <main class="content-wrapper">
-    <div class="login-container">
-      <h2 class="login-title">Log in to VBA mobile</h2>
-      <div class="w-form">
-        <form action="/login" class="login-form" data-name="Login Form" data-redirect="/" id="wf-form-Login-Form" method="post" name="wf-form-Login-Form">
-          <label for="username-2">Username :</label>
-          <input class="w-input" data-name="username" id="username-2" maxlength="256" name="username" placeholder="Enter your username" required="required" type="text">
-          <label for="password">Password :&nbsp;</label>
-          <input class="w-input" data-name="password" id="password" maxlength="256" name="password" placeholder="Enter your password" required="required" type="password">
-          <input class="form-button w-button" data-wait="Please wait..." type="submit" value="Log in">
-        </form>
-        <div class="w-form-done">
-          <div >Thank you! Your submission has been received!</div>
-        </div>
-        <div class="w-form-fail">
-          <div >Oops! Something went wrong while submitting the form</div>
-        </div>
-      </div>
-      <div class="account-links">
-        <a class="login-links" href="#">Forgotten account?</a>
-        <div >·</div>
-        <a class="login-links" href="#">Sign up for VBA</a>
-      </div>
-    </div>
+    <h1 >Surveys</h1>
+    <ul class="projects-list w-list-unstyled">
+      <li class="project-card">
+        <a class="card-link w-inline-block" href="/surveyspage">
+          <div class="project-card-title">Bat survey Camperdown</div>
+          <div >Status : Published</div>
+          <div class="project-card-footer">
+            <div class="project-card-dates">10/12/01 ➞ 14/12/01</div>
+            <div class="project-card-id">#1214</div>
+          </div>
+        </a>
+      </li>
+    </ul>
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="js/vbamobile.js" type="text/javascript"></script>
