Added new webflow template view detailed survey information

--- a/vbamobile.webflow/projects.html
+++ b/vbamobile.webflow/projects.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Sep 30 2016 10:34:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Oct 01 2016 10:09:28 GMT+0000 (UTC)  -->
 <html data-wf-page="57e9cb561117c47f4d92d349" data-wf-site="57ced8c91d3807cb6dad5f35">
-<head >
+<head>
   <meta charset="utf-8">
-  <title >myProject</title>
+  <title>myProject</title>
   <meta content="myProject" property="og:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -30,13 +30,13 @@
     <a class="username" href="#">username</a>
   </header>
   <main class="content-wrapper">
-    <h1 >Projects list</h1>
+    <h1 class="section-title">Projects list</h1>
     <ul class="projects-list w-list-unstyled">
       <li class="project-card">
         <a class="card-link w-inline-block" href="/surveyspage">
           <div class="project-card-title">Armstrong Western Highway Diversion</div>
           <p class="project-card-desc">Fauna survey and assessment prior to new road diversion.
-            <br >Bla bla bla save the possum, bla bla.</p>
+            <br>Bla bla bla save the possum, bla bla.</p>
           <div class="project-card-footer">
             <div class="project-card-dates">10/12/01 ➞ 14/12/01</div>
             <div class="project-card-id">#1214</div>
