--- a/vbamobile.webflow/index.html
+++ b/vbamobile.webflow/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Sep 30 2016 10:34:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Oct 01 2016 10:09:28 GMT+0000 (UTC)  -->
 <html data-wf-page="57ced8c91d3807cb6dad5f36" data-wf-site="57ced8c91d3807cb6dad5f35">
-<head >
+<head>
   <meta charset="utf-8">
-  <title >Vba mobile</title>
+  <title>Vba mobile</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -30,8 +30,8 @@
   </header>
   <main class="content-wrapper">
     <div class="button-container">
-      <a class="project-button w-button" href="project.html">+&nbsp;New Project</a>
-      <a class="project-button w-button" href="/projects">View Project</a>
+      <a class="project-button w-button" href="/project">+&nbsp;New Project</a>
+      <a class="project-button w-button" href="projects.html">View Project</a>
     </div>
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
