--- a/vbamobile.webflow/surveys.html
+++ b/vbamobile.webflow/surveys.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Sep 30 2016 10:34:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Oct 01 2016 10:09:28 GMT+0000 (UTC)  -->
 <html data-wf-page="57ee3d1517fa56b83ae17d3f" data-wf-site="57ced8c91d3807cb6dad5f35">
-<head >
+<head>
   <meta charset="utf-8">
-  <title >Viewsurveys</title>
+  <title>Viewsurveys</title>
   <meta content="Viewsurveys" property="og:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -30,15 +30,17 @@
     <a class="username" href="#">username</a>
   </header>
   <main class="content-wrapper">
-    <h1 >Surveys</h1>
+    <h1 class="section-title">Survey detail</h1>
     <ul class="projects-list w-list-unstyled">
       <li class="project-card">
         <a class="card-link w-inline-block" href="/surveyspage">
-          <div class="project-card-title">Bat survey Camperdown</div>
-          <div >Status : Published</div>
-          <div class="project-card-footer">
-            <div class="project-card-dates">10/12/01 ➞ 14/12/01</div>
-            <div class="project-card-id">#1214</div>
+          <div>
+            <div class="project-card-title">Bat survey Camperdown</div>
+            <div>Status : Approved</div>
+            <div class="project-card-footer">
+              <div class="project-card-dates">10/12/01 ➞ 14/12/01</div>
+              <div class="project-card-id">#1214</div>
+            </div>
           </div>
         </a>
       </li>
