--- a/vbamobile.webflow/species.html
+++ b/vbamobile.webflow/species.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Oct 10 2016 02:35:10 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Oct 14 2016 01:49:21 GMT+0000 (UTC)  -->
 <html data-wf-page="57f59e99d39b150c44e2b6ed" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -30,95 +30,54 @@
     <a class="username" href="#">username</a>
   </header>
   <main class="content-wrapper">
-    <h1 class="section-title">Species list</h1>
-    <ul class="cards-list w-list-unstyled">
-      <li class="method project-card">
-        <a class="card-link w-inline-block" href="/surveyspage">
-          <div class="survey-detail">
-            <div class="row">
-              <div>Method :</div>
-              <div class="response">Targeted search</div>
-            </div>
-            <div class="row">
-              <div>Discipline :</div>
-              <div class="response">Terrestrial Fauna</div>
-            </div>
-            <div class="row">
-              <div>Area sampled :</div>
-              <div class="response">250 m²</div>
-            </div>
-            <div class="row">
-              <div>Number of Observers :</div>
-              <div class="response">12</div>
-            </div>
-            <div class="row">
-              <div>Number of species :</div>
-              <div class="response">69</div>
-            </div>
-            <div class="project-card-footer">
-              <div class="project-card-dates">01/02/2016 ➞ 15/02/2016</div>
-              <div class="project-card-id"><span class="number-sign">#</span>98745</div>
-            </div>
+    <div class="content">
+      <h1 class="section-title">Species list</h1>
+      <a class="card-link w-inline-block" href="#">
+        <div class="survey-detail">
+          <div class="row">
+            <div>Method :</div>
+            <div class="response">{{this.method.name}}</div>
           </div>
-        </a>
-      </li>
-      <li class="project-card">
-        <a class="card-link w-inline-block" href="#">
-          <div class="taxon">
-            <div class="taxon-names">Tamar Goby
-              <br>Afurcagobius tamarensis</div>
-            <div class="project-card-footer">
-              <div class="taxon-count">Count : 25</div>
-              <div class="taxon-id"><span class="number-sign">#</span>1214</div>
-            </div>
+          <div class="row">
+            <div>Discipline :</div>
+            <div class="response">{{this.method.discipline}}</div>
           </div>
-        </a>
-      </li>
-    </ul>
-    <ul class="cards-list w-list-unstyled">
-      <li class="method project-card">
-        <a class="card-link w-inline-block" href="/surveyspage">
-          <div class="survey-detail">
-            <div class="row">
-              <div>Method :</div>
-              <div class="response">{{this.method.name}}</div>
-            </div>
-            <div class="row">
-              <div>Discipline :</div>
-              <div class="response">{{this.method.discipline}}</div>
-            </div>
-            <div class="row">
-              <div>Area sampled :</div>
-              <div class="response">{{this.method.area}}</div>
-            </div>
-            <div class="row">
-              <div>Number of Observers :</div>
-              <div class="response">{{this.method.obs}}</div>
-            </div>
-            <div class="row">
-              <div>Number of species :</div>
-              <div class="response">{{this.method.species}}</div>
-            </div>
-            <div class="project-card-footer">
-              <div class="project-card-dates">{{this.method.start}} ➞ {{this.method.end}}</div>
-              <div class="project-card-id"><span class="number-sign">#</span>{{this.method.id}}</div>
-            </div>
+          <div class="row">
+            <div>Area sampled :</div>
+            <div class="response">{{this.method.area}}</div>
           </div>
-        </a>
-      </li>
-      <li class="project-card">
-        <a class="card-link w-inline-block" href="#">
-          <div class="taxon">
-            <div class="taxon-names">{{this.taxon.commonName}}
-              <br>{{this.taxon.scientificName}}</div>
-            <div class="project-card-footer">
-              <div class="taxon-count">Count : {{this.taxon.count}}</div>
-              <div class="taxon-id"><span class="number-sign">#</span>{{this.taxon.id}}</div>
-            </div>
+          <div class="row">
+            <div>Number of Observers :</div>
+            <div class="response">{{this.method.obs}}</div>
           </div>
-        </a>
-      </li>
-    </ul>
+          <div class="row">
+            <div>Number of species :</div>
+            <div class="response">{{this.method.species}}</div>
+          </div>
+          <div class="project-card-footer">
+            <div class="project-card-dates">{{this.method.start}} ➞ {{this.method.end}}</div>
+            <div class="project-card-id"><span class="number-sign">#</span>{{this.method.id}}</div>
+          </div>
+        </div>
+      </a>
+      <a class="add-species-button w-button" href="/newspecies">add Taxon</a>
+      <ul class="cards-list w-list-unstyled">
+        <li class="project-card">
+          <a class="card-link w-inline-block" href="#">
+            <div class="taxon">
+              <div class="taxon-names">{{this.taxon.commonName}}
+                <br>{{this.taxon.scientificName}}</div>
+              <div class="project-card-footer">
+                <div class="taxon-count">Count : {{this.taxon.count}}</div>
+              </div>
+              <div class="row rowleft">
+                <div class="taxon-id"><span class="number-sign">#</span>{{this.taxon.id}}</div>
+              </div>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="js/vbamobile.js" type="text/javascript"></script>
