--- a/vbamobile.webflow/projects.html
+++ b/vbamobile.webflow/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 14 2016 01:49:21 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Oct 22 2016 04:58:46 GMT+0000 (UTC)  -->
 <html data-wf-page="57e9cb561117c47f4d92d349" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -30,30 +30,32 @@
     <a class="username" href="#">username</a>
   </header>
   <main class="content-wrapper">
-    <h1 class="section-title">Projects list</h1>
-    <ul class="cards-list w-list-unstyled">
-      <li class="project-card">
-        <a class="card-link w-inline-block" href="/surveyspage">
-          <div class="project-card-title">Armstrong Western Highway Diversion</div>
-          <p class="project-card-desc">Fauna survey and assessment prior to new road diversion.
-            <br>Bla bla bla save the possum, bla bla.</p>
-          <div class="project-card-footer">
-            <div class="project-card-dates">10/12/01 ➞ 14/12/01</div>
-            <div class="project-card-id"><span class="number-sign">#</span>1214</div>
-          </div>
-        </a>
-      </li>
-      <li class="project-card">
-        <a class="card-link w-inline-block" href="/surveyspage">
-          <div class="project-card-title">{{this.title}}</div>
-          <p class="project-card-desc">{{this.desc}}</p>
-          <div class="project-card-footer">
-            <div class="project-card-dates">{{this.start}}&nbsp;➞ {{this.end}}</div>
-            <div class="project-card-id"><span class="number-sign">#</span>{{this.id}}</div>
-          </div>
-        </a>
-      </li>
-    </ul>
+    <div class="content">
+      <h1 class="section-title">Projects list</h1>
+      <ul class="cards-list w-list-unstyled">
+        <li class="project-card">
+          <a class="card-link w-inline-block" href="/surveyspage">
+            <div class="project-card-title">Armstrong Western Highway Diversion</div>
+            <p class="project-card-desc">Fauna survey and assessment prior to new road diversion.
+              <br>Bla bla bla save the possum, bla bla.</p>
+            <div class="project-card-footer">
+              <div class="project-card-dates">10/12/01 ➞ 14/12/01</div>
+              <div class="project-card-id"><span class="number-sign">#</span>1214</div>
+            </div>
+          </a>
+        </li>
+        <li class="project-card">
+          <a class="card-link w-inline-block" href="/surveyspage">
+            <div class="project-card-title">{{this.title}}</div>
+            <p class="project-card-desc">{{this.desc}}</p>
+            <div class="project-card-footer">
+              <div class="project-card-dates">{{this.start}}&nbsp;➞ {{this.end}}</div>
+              <div class="project-card-id"><span class="number-sign">#</span>{{this.id}}</div>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="js/vbamobile.js" type="text/javascript"></script>
