--- a/vbamobile.webflow/index.html
+++ b/vbamobile.webflow/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Oct 22 2016 04:58:46 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Dec 02 2016 22:11:30 GMT+0000 (UTC)  -->
 <html data-wf-page="57ced8c91d3807cb6dad5f36" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -29,9 +29,12 @@
     <a class="username" href="#">username</a>
   </header>
   <main class="content-wrapper">
-    <div class="button-container">
-      <a class="project-button w-button" href="/project">+&nbsp;New Project</a>
-      <a class="project-button w-button" href="projects.html">View Project</a>
+    <div class="landing-page-buttons">
+      <a class="add-observations landing-page-button w-button" href="#">Add Observation<br>🔎🐍</a>
+      <div class="bottom-buttons">
+        <a class="landing-page-button search-vba w-button" href="#">Search Vba</a>
+        <a class="landing-page-button my-observations w-button" href="#">My observations</a>
+      </div>
     </div>
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
